Parallel executation is added to improve the api response